--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-glitch",
   "version": "0.1.0",
   "homepage": "http://chuson1996.github.io/react-glitch",
+  "main": "lib/react-glitch.js",
   "devDependencies": {
     "autoprefixer": "6.7.2",
     "babel-core": "6.22.1",
